# test-duckdb

./: .gitignore  CMakeLists.txt  build.sh  csv-fifo.sh  fifo-example.sh  go.mod  go.sum  main.cpp  main.go  readme.MD  run.sh  test_server.go
rust_arrow_client/: Cargo.toml
rust_arrow_client/src/: array.rs  batch_stream.rs  data_model.rs  lib.rs
