[package]
name = "rust_arrow_client"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "14.0.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
ureq = { version="2.4.0", features=["json"]}
anyhow = "1.0.57"
static_assertions = "1.1.0"
bytemuck = "1.9.1"
libc = "0.2.126"

[lib]
crate-type = ["staticlib"]